# rcpdaemon

./: Cargo.toml  INSTALL.md  README.md
launchd/: com.devstroop.rcpd.plist
src/: cli_handlers.rs  config.rs  daemon.rs  daemon_install.rs  daemon_install_new.rs  error.rs  handlers.rs  instance.rs  lib.rs  lifecycle.rs  main.rs  main_service_fix.rs  main_session_config_fix.rs  main_user_fix.rs  manager.rs  rcp.code-workspace  service.rs  service_handler_fix.rs  service_handler_fix_new.rs  simple_main.rs  user.rs
src/api/: config.rs  handlers.rs  mod.rs  server.rs
src/auth/: factory.rs  improved_native.rs  manager.rs  mock_provider.rs  mod.rs  native_linux.rs  native_macos.rs  native_unix.rs  native_windows.rs  provider.rs
src/cli/: config.rs  error.rs  mod.rs  service.rs  types.rs  utils_backup.rs
src/cli/commands/: app.rs  completions.rs  config.rs  config.rs.bak  diag.rs  mod.rs  server.rs  service.rs  service.rs.bak  session.rs  user.rs
src/cli/utils/: confirmation.rs  mod.rs
src/platform/: mod.rs  unix.rs  windows.rs
src/server/: application_config.rs  config.rs  error.rs  mod.rs  server.rs  session.rs  user.rs
systemd/: rcpd.service
tests/: auth_manager_tests.rs  cli_tests.rs  config_test.rs  config_tests.rs  error_tests.rs  lifecycle_tests.rs  manager_test.rs  manager_tests.rs  native_auth_tests.rs  service_tests.rs
